small dots added

--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -13,6 +13,10 @@ h2 {
   font-size: 18px;
   margin-left: 5px;
 }
+.small-dots {
+  margin-top: -4px;
+  margin-left: 5px;
+}
 .redify {
   color: $redify !important;
 }
