add changes to footer

--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -1,7 +1,12 @@
-$redify: #d00202;
-$blueify: #0957bd;
-$greenify: #059809;
-$hoverGreenify: #05b10a;
+$accent: #1db6b6;
+$light-stone: #e7e7e7;
+$stone: #dbdbdb;
+
+
+$redify: #1ec1c1;
+$blueify: #1ec1c1;
+$greenify: #1ec1c1;
+$hoverGreenify: #1ec1c1;
 $whiteify: rgba(255,255,255,0.2);
 $greyify: rgba(0, 0, 0, 0.1);
 
