Fix with colors and adds button

--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -1,37 +1,13 @@
-$accent: #159c9c;
-$dark-accent: #0f7979;
-$lighter-stone: #f1f1f1;
-$light-stone: #e7e7e7;
-$stone: #dbdbdb;
-
-h2 {
-  font-size: 32px;
-  font-weight: bolder;
-}
-.boldify {
-  font-weight: bolder;
-}
-.thinify {
-  font-weight: normal;
-}
-
-// New theme
-$light-main-color: rgb(227, 244, 252);
-$main-color: rgb(17, 35, 45);
-$dark-main-color: rgb(84, 134, 160);
-$darker-main-color: rgb(25, 54, 70);
-
-
+/* Color Variables. */
 $dark-background: rgb(0, 1, 19);
 $dark-blue: rgba(17,35,45,1);
 $blue: rgba(11,43,143,1);
+$light-blue: rgb(27, 72, 210);
 $purple: rgba(168,8,233,1);
 $light-purple: rgb(210, 95, 255);
 $white: #fff;
 
-$main-transition: all .3s ease-in-out;
-$main-transition--slow: all .7s ease-in-out;
-
+/* Backgrounds */
 @mixin main-background {
   background: $dark-blue;
   background: linear-gradient(21deg, $dark-blue 11%, $blue 50%, $purple 100%);
@@ -42,7 +18,11 @@ $main-transition--slow: all .7s ease-in-out;
   background: linear-gradient(21deg, $dark-background 50%, $blue 100%);
 }
 
-// Responsive
+/* Transitions. */
+$main-transition: all .3s ease-in-out;
+$main-transition--slow: all .7s ease-in-out;
+
+/* Media Queries. */
 @mixin mobile-up {
   @media only screen and (min-width: 420px) {
     @content;
