Update to vue 3

--- a/src/assets/style/theme.scss
+++ b/src/assets/style/theme.scss
@@ -1,10 +1,10 @@
 /* Color Variables. */
-$dark-background: rgb(0, 1, 19);
-$dark-blue: rgba(17,35,45,1);
-$blue: rgba(11,43,143,1);
-$light-blue: rgb(27, 72, 210);
-$purple: rgba(168,8,233,1);
-$light-purple: rgb(210, 95, 255);
+$dark-background: #000113;
+$dark-blue: #11232d;
+$blue: #0b2b8f;
+$light-blue: #1b48d2;
+$purple: #a808e9;
+$light-purple: #d25fff;
 $white: #fff;
 
 /* Backgrounds */
