--- a/src/assets/style/theme.scss
+++ b/src/assets/style/theme.scss
@@ -36,6 +36,18 @@ $main-transition--slow: all .7s ease-in-out;
 }
 
 /* Global styling */
+* {
+  font-family: "Roboto", sans-serif;
+}
+
+body {
+  margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+  cursor: default;
+}
+
 .btn {
   display: block;
   width: fit-content;
