--- a/src/assets/style/theme.scss
+++ b/src/assets/style/theme.scss
@@ -35,6 +35,12 @@ $main-transition--slow: all .7s ease-in-out;
   }
 }
 
+@mixin  laptop-up {
+  @media only screen and (min-width: 1110px) {
+    @content;
+  }
+}
+
 /* Global styling */
 * {
   font-family: "Roboto", sans-serif;
@@ -56,6 +62,7 @@ h1, h2, h3, h4, h5, h6, p {
   text-decoration: none;
   text-transform: uppercase;
   font-weight: bold;
+  text-align: center;
 
   &--outline {
     &-purple {
